[FIX] point_of_sale: constrain the customer display type
Prevent crashes when using the pos app by blocking the user during
configuration. We raise an error if the user selected `an IoT-connected screen`
('proxy') for the `customer_display_type` but he didn't specify the iot box's IP
address.

Also, in this commit, we fix the issue where the `customer_display_type` field
get hidden the moment the user switches it to 'none'.

X-original-commit: 8eec525db22db6f7c403c0ded2efb729904022e0

--- a/addons/point_of_sale/views/res_config_settings_views.xml
+++ b/addons/point_of_sale/views/res_config_settings_views.xml
@@ -343,7 +343,7 @@
                             <setting id="pos_other_devices" string="ePos Printer" help="Connect device to your PoS without an IoT Box" documentation="/applications/sales/point_of_sale/configuration/epos_ssc.html">
                                 <field name="pos_other_devices"/>
                             </setting>
-                            <setting id="customer_display" string="Customer Display" help="Show checkout to customers through a second display" invisible="pos_customer_display_type == 'none'" documentation="/applications/sales/point_of_sale/shop/customer_display.html" >
+                            <setting id="customer_display" string="Customer Display" help="Show checkout to customers through a second display" documentation="/applications/sales/point_of_sale/shop/customer_display.html" >
                                 <div>
                                     <field name="pos_customer_display_type"/>
                                     <div class="mt-1" invisible="pos_customer_display_type == 'none'">
