--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -71,3 +71,7 @@
 .o-mail-Composer-compactContainer {
     box-shadow: 0px -3px 25px 3px rgba(50, 50, 50, 0.1);
 }
+
+.o-mail-Composer-input {
+    font-family: "text-emoji", $font-family-base;
+}
