[IMP] l10n_in_pos: kiosk mode payment terminal configuration message
Before this commit:
====================
In KIOSK mode, the message for the payment terminal was specific to
Stripe and Adyen.

After this commit:
===================
In KIOSK mode, we now support the `Razorpay` terminal for `l10n_in`. The
message for the payment terminal in the res config settings has been updated
to. "Please note that the kiosk for INR currency only works with Razorpay
terminal" for INR currency.

task- 3981002

closes odoo/odoo#169912

Signed-off-by: Vlad Stroia (vlst) <vlst@odoo.com>

--- a/addons/point_of_sale/views/res_config_settings_views.xml
+++ b/addons/point_of_sale/views/res_config_settings_views.xml
@@ -50,6 +50,9 @@
                             </setting>
                         </block>
                         <block title="Payment" id="pos_payment_section">
+                            <div id="available_payment_terminal" class="o_notification_alert alert alert-warning" role="alert" invisible="not is_kiosk_mode">
+                                <span>Please note that the kiosk only works with Adyen &amp; Stripe terminals</span>
+                            </div>
                             <setting id="payment_methods_new" string="Payment Methods" help="Payment methods available" documentation="/applications/sales/point_of_sale/payment_methods.html">
                                 <field name="pos_payment_method_ids" colspan="4" widget="many2many_tags" readonly="pos_has_active_session" required="pos_company_has_template" options="{'no_create': True}" />
                                 <div>
