[IMP] base, web, product: 'KanbanView', adjust '<aside>' sizing
--- Adjust `<aside>` sizing ---
PR odoo/#167751, introduced Bootstrap columns to manage kanban cards
using an `<aside>` element.
But the rendering is not optimal for some cards (eg. Contacts, Products)
and the these are less easy to read.

This commit adjusts the default size of `<aside>` and its inner image
elements. Bootstrap columns can still be defined if we want to customize
the size of the `<main>` and `<aside>`.

--- Reintroduce `min-width` on `<main>` ---
PR odoo/#167751, also removed a `min-width` defined on the `<main>` that
was useful to force its content to be truncated. The property has been
reintroduced since it's still necessary.

task-3997115

closes odoo/odoo#169790

Signed-off-by: Aaron Bohy (aab) <aab@odoo.com>

--- a/addons/product/views/product_template_views.xml
+++ b/addons/product/views/product_template_views.xml
@@ -95,8 +95,8 @@
                 <field name="categ_id"/>
                 <progressbar field="activity_state" colors='{"planned": "success", "today": "warning", "overdue": "danger"}'/>
                 <templates>
-                    <t t-name="kanban-card" class="row g-0">
-                        <main class="col-10 pe-2">
+                    <t t-name="kanban-card" class="flex-row">
+                        <main class="pe-2">
                             <div class="mb-1">
                                 <div class="d-flex mb-0 h5">
                                     <field class="me-1" name="is_favorite" widget="boolean_favorite" nolabel="1"/>
@@ -114,8 +114,8 @@
                             </span>
                             <field name="product_properties" widget="properties"/>
                         </main>
-                        <aside class="col-2 p-0">
-                            <field name="image_128" widget="image" alt="Product"/>
+                        <aside>
+                            <field name="image_128" widget="image" alt="Product" options="{'img_class': 'w-100 object-fit-contain'}"/>
                         </aside>
                     </t>
                 </templates>
