[IMP] base: use jsonb for config parameter

--- a/odoo/addons/base/views/ir_config_parameter_views.xml
+++ b/odoo/addons/base/views/ir_config_parameter_views.xml
@@ -25,7 +25,7 @@
                   <sheet>
                     <group>
                         <field name="key"/>
-                        <field name="value"/>
+                        <field name="value_edit"/>
                     </group>
                   </sheet>
                 </form>
