[REF] web, im_livechat: remove CopyClipboardText widget
This commit removes the CopyClipboardText widget since it is pretty much
unused throughout the codebase and its design doesn't fit with the milk
update.

task-3964629

closes odoo/odoo#170010

Related: odoo/enterprise#65012
Signed-off-by: Mathieu Duckerts-Antoine (dam) <dam@odoo.com>

--- a/addons/web/static/src/views/fields/copy_clipboard/copy_clipboard_field.scss
+++ b/addons/web/static/src/views/fields/copy_clipboard/copy_clipboard_field.scss
@@ -1,4 +1,4 @@
-.o_field_CopyClipboardText, .o_field_CopyClipboardURL, .o_field_CopyClipboardChar {
+.o_field_CopyClipboardURL, .o_field_CopyClipboardChar {
     > div {
         grid-template-columns: auto min-content;
         border: 1px solid $primary;
@@ -20,12 +20,9 @@
             margin-right: 4px;
             align-self: center;
             text-align: center;
-
-            &:not(.o_field_CopyClipboardText) {
-                overflow: hidden;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-            }
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
     }
 }
