[IMP] hr_contract:  configure contract working calendar for flexible
Prior to this commit, the field `resource_calendar_id` was a required field.
However, with the introduction of fully flexible employee which is defined
as an employee without a resource calendar, we need to remove this requirement.

With this commit, the field `resource_calendar_id` will only be required when
the field `work_entry_source` is set to 'Working Schedule'. By default,
the field will be not required.

Task: 3976534

--- a/addons/hr_contract/views/hr_contract_views.xml
+++ b/addons/hr_contract/views/hr_contract_views.xml
@@ -203,11 +203,9 @@
                                 <div id="resource_calendar_warning" class="d-flex align-items-center">
                                         <field name="resource_calendar_id"
                                             groups="!hr_contract.group_hr_contract_manager"
-                                            required="1"
                                             options="{'no_open': True, 'no_create': True}"/>
                                         <field name="resource_calendar_id"
-                                            groups="hr_contract.group_hr_contract_manager"
-                                            required="1"/>
+                                            groups="hr_contract.group_hr_contract_manager"/>
                                         <widget
                                             name="contract_warning_tooltip"
                                             invisible="not calendar_mismatch or state != 'open'"/>
