--- a/addons/hr_work_entry_contract/views/hr_contract_views.xml
+++ b/addons/hr_work_entry_contract/views/hr_contract_views.xml
@@ -5,7 +5,20 @@
         <field name="model">hr.contract</field>
         <field name="inherit_id" ref="hr_contract.hr_contract_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//div[@id='resource_calendar_warning']" position="after">
+            <xpath expr="//div[@id='resource_calendar_warning']" position="replace">
+                <div id="resource_calendar_warning" class="d-flex align-items-center">
+                    <!-- resource calendar is only required when work_entry_source is set to 'calendar' -->
+                    <field name="resource_calendar_id"
+                    groups="!hr_contract.group_hr_contract_manager"
+                        required="work_entry_source == 'calendar'"
+                        options="{'no_open': True, 'no_create': True}"/>
+                    <field name="resource_calendar_id"
+                        groups="hr_contract.group_hr_contract_manager"
+                        required="work_entry_source == 'calendar'"/>
+                    <widget
+                        name="contract_warning_tooltip"
+                        invisible="not calendar_mismatch or state != 'open'"/>
+                </div>
                 <!-- Makes no sense to display only one possibility -->
                 <field name="work_entry_source" widget="radio" invisible="1"/>
             </xpath>
